--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header h1 {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 10px;
     font-weight: 800;
+    color: rgb(2, 2, 85);
 }
 
 header ul {
@@ -41,7 +42,7 @@ header li {
 
 header a {
     text-decoration: none;
-    color: black;
+    color: rgb(2, 2, 85);
 }
 
 header a:hover {
@@ -70,7 +71,20 @@ main h1 {
     line-height: 100px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
-    padding: 100px 50px;
+    padding: 100px;
+    color: rgb(2, 2, 85);
+    
+}
+
+main h2 {
+    position: absolute;
+    top: 410px;
+    left: 25%;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 3px;
+    font-weight: 100;
+    color: rgb(2, 2, 85);
 }
 
 .foto__carro {
@@ -85,6 +99,5 @@ video{
     display: block;
     width: 100%;
     z-index: -1;
-
     opacity: 0.9; 
 }
