--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header li {
 
 header a {
     text-decoration: none;
-    color: rgb(2, 2, 85);
+    color:black;
 }
 
 header a:hover {
@@ -53,13 +53,13 @@ header a:hover {
 
 header .bot1 {
     color: aliceblue;
-    background-color: black;
+    background-color:rgb(0, 0, 0, 0.5);
     padding: 8px 35px;
     border-radius: 10px;
 }
 
 header .bot1:hover {
-    background-color: white;
+    background-color: aliceblue;
     color: black;
     border: 1px solid;
     transition: 0.3s;
@@ -102,6 +102,7 @@ video{
     z-index: -1;
     opacity: 0.9; 
 }
+
 .main__ul{
     width: 900px;
     height: 310px;
