--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 body {
     overflow-x: hidden;
-    background-color: rgb(0, 0, 0, 0.8);
+    /* background-color: rgb(0, 0, 0, 0.8); */
 }
 
 header {
@@ -106,11 +106,11 @@ video{
 .main__ul{
     width: 900px;
     height: 310px;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
     top: 170px;
     left: 305px;
-    border-radius: 10px;
+    border-radius: 15px;
     list-style: none;
     z-index: -1;
 }
